# partisia-example-contracts

./: README.md
contracts/auction/: Cargo.toml
contracts/auction/src/: lib.rs  tests.rs
contracts/conditional-escrow-transfer/: Cargo.toml
contracts/conditional-escrow-transfer/src/: lib.rs
contracts/liquidity-swap/: Cargo.toml
contracts/liquidity-swap/src/: lib.rs  tests.rs
contracts/multi-voting/: Cargo.toml
contracts/multi-voting/src/: lib.rs
contracts/nft/: Cargo.toml  readme.md
contracts/token/: Cargo.toml  readme.md
contracts/token/src/: lib.rs
contracts/voting/: Cargo.toml
contracts/voting/src/: lib.rs
contracts/zk-average-salary/: Cargo.toml
contracts/zk-average-salary/src/: contract.rs  zk_compute.rs
contracts/zk-second-price-auction/: Cargo.toml
contracts/zk-second-price-auction/src/: contract.rs  zk_compute.rs
contracts/zk-voting/: Cargo.toml
contracts/zk-voting/src/: contract.rs  fraction.rs  zk_compute.rs
